<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_margin_2dp"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:textAlignment="gravity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardProduct"
        android:layout_width="@dimen/cardview_product_cardImage_width"
        android:layout_height="@dimen/cardview_product_cardImage_height"
        android:layout_margin="@dimen/layout_margin_4dp"
        app:cardCornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <View
                android:id="@+id/view4"
                android:layout_width="@dimen/cardview_product_view_width"
                android:layout_height="@dimen/cardview_product_view_height"
                android:background="@drawable/view_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin_4dp"
                app:layout_constraintBottom_toBottomOf="@+id/view4"
                app:layout_constraintStart_toStartOf="@+id/view4"
                app:layout_constraintTop_toTopOf="@+id/view4"
                app:srcCompat="@drawable/ic_star" />

            <TextView
                android:id="@+id/txtRating"
                android:layout_width="@dimen/auto_fix"
                android:layout_height="@dimen/auto_fix"
                android:gravity="center"
                android:textColor="@color/yellow"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/view4"
                app:layout_constraintEnd_toEndOf="@+id/view4"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/view4"
                tools:text="@string/tools_text_rating" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <RatingBar
        android:id="@+id/ratingBar"
        style="@android:style/Widget.Material.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_4dp"
        android:numStars="5"
        android:progressDrawable="@drawable/custom_ratingbar"
        app:layout_constraintStart_toEndOf="@+id/cardProduct"
        app:layout_constraintTop_toTopOf="@+id/cardProduct" />

    <TextView
        android:id="@+id/txtBookName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/ratingBar"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        tools:text="@string/tools_text_bookName" />

    <TextView
        android:id="@+id/txtPublisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintStart_toStartOf="@+id/txtBookName"
        app:layout_constraintTop_toBottomOf="@+id/txtBookName"
        tools:text="@string/tools_text_publisher" />

    <TextView
        android:id="@+id/txtAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintStart_toStartOf="@+id/txtPublisher"
        app:layout_constraintTop_toBottomOf="@+id/txtPublisher"
        tools:text="@string/tools_text_author" />

    <TextView
        android:id="@+id/txtSeller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintStart_toStartOf="@+id/txtAuthor"
        app:layout_constraintTop_toBottomOf="@+id/txtAuthor"
        tools:text="@string/tools_text_seller" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/txt_price_bg"
        android:textColor="@color/green"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardProduct"
        app:layout_constraintStart_toStartOf="@+id/txtSeller"
        tools:text="@string/tools_text_bookPrice" />

    <View
        android:id="@+id/view5"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/view_line_height"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>