<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.products.ProductActivity">

    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/product_view_height"
        android:background="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view3"
        tools:text="@string/tools_text_category" />

    <Button
        android:id="@+id/btnSort"
        android:layout_width="@dimen/auto_fix"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableLeft="@drawable/sorting"
        android:drawablePadding="@dimen/drawable_padding_16dp"
        android:paddingLeft="@dimen/text_padding_50dp"
        android:text="@string/text_Sort"
        android:textAlignment="textStart"
        android:textColor="@color/green"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/view7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <View
        android:id="@+id/view7"
        android:layout_width="@dimen/view_line_width"
        android:layout_height="@dimen/auto_fix"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/rcvProductList"
        app:layout_constraintEnd_toStartOf="@+id/btnLayoutChange"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <Button
        android:id="@+id/btnLayoutChange"
        android:layout_width="@dimen/button_layoutChange_width"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableStart="@drawable/icon_grid_32"
        android:drawablePadding="@dimen/drawable_padding_16dp"
        android:gravity="bottom|top"
        android:paddingLeft="@dimen/text_padding_50dp"
        android:text="@string/text_grid"
        android:textColor="@color/green"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvProductList"
        android:layout_width="match_parent"
        android:layout_height="@dimen/auto_fix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSort"
        tools:listitem="@layout/cardview_product" />
</androidx.constraintlayout.widget.ConstraintLayout>